--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CSS-Houdini-Experements",
+  "name": "squircle-houdini",
   "version": "0.1.0",
   "private": true,
   "homepage": "",
