--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "squircle-houdini-css",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "homepage": "",
   "dependencies": {
-    "@testing-library/react": "^9.3.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
