--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "rm": "rm -rf build/*",
-    "deploy": "git push origin `git subtree split --prefix build master`:gh-pages --force"
+    "deploy": "git push origin `git subtree split --prefix build main`:gh-pages --force"
   },
   "eslintConfig": {
     "extends": "react-app"
