renamed `--squircle-color` to `--squircle-fill`
- renamed `--squircle-color` to `--squircle-fill`
- polyfill description added

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "css-paint-polyfill": "^3.3.0"
   }
 }
