--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-houdini-squircle",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": false,
   "browser": "squircle.min.js",
   "homepage": "./",
@@ -9,7 +9,8 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "css-paint-polyfill": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {
-    "css-paint-polyfill": "^3.3.0"
   }
 }
