--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "squircle-css-houdini",
-  "version": "0.3.0",
+  "version": "0.1.0",
   "private": false,
-  "homepage": "https://github.com/PavelLaptev/squircle-houdini-css",
-  "description": "A tiny CSS Houdini module that allows to add a squircle shape to HTML elements",
-  "author": "Pavel Laptev",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "watch:lib-build": "nodemon  --watch lib/squircle.js --exec 'npm run lib-build'",
-    "lib-build": "uglifyjs lib/squircle.js -o squircle.min.js && cp squircle.min.js public/squircle.min.js"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {},
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.4",
-    "css-paint-polyfill": "^3.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.63.4",
     "typescript": "5.1.3",
-    "uglify-js": "^3.17.4"
-  }
+    "css-paint-polyfill": "^3.4.0",
+    "sass": "^1.63.4"
+  },
 }
